// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loaded action sets loading to false 1`] = `
Object {
  "currentTime": 0,
  "loading": false,
  "playing": false,
}
`;

exports[`Loading action sets loading to true 1`] = `
Object {
  "currentTime": 0,
  "loading": true,
  "playing": false,
}
`;

exports[`Pause action sets playing to false 1`] = `
Object {
  "currentTime": 0,
  "loading": false,
  "playing": false,
}
`;

exports[`Play action sets playing to true 1`] = `
Object {
  "currentTime": 0,
  "loading": false,
  "playing": true,
}
`;

exports[`Update current time action updates currentTime 1`] = `
Object {
  "currentTime": 10,
  "loading": false,
  "playing": false,
}
`;
